updated site.js made changes to the data bas

--- a/exercise2/order.html
+++ b/exercise2/order.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
 
-        <form action="">
+        <form method="post"action="">
 
 
         <div class="row">
@@ -18,33 +18,33 @@
                 <h3 class="title">Billing Information</h3>
                 <div class="inputBox">
                     <span> full Name :</span>
-                    <input type="text" placeholder="Amabo Raphael ">
+                    <input type="text" placeholder="Amabo Raphael " required>
                 </div>
 
                 <div class="inputBox">
                     <span> email:</span>
-                    <input type="text" placeholder="example@email.com">
+                    <input type="text" placeholder="example@email.com"required>
                 </div>
 
                 <div class="inputBox">
                     <span> Address :</span>
-                    <input type="text" placeholder="street-street number-building number- door number ">
+                    <input type="text" placeholder="street-street number-building number- door number "required>
                 </div>
 
                 <div class="inputBox">
                     <span> City :</span>
-                    <input type="text" placeholder="Hameenlinna">
+                    <input type="text" placeholder="Hameenlinna"required>
                 </div>
 
                 
                 <div class="flex">
                     <div class="inputBox">
                     <span> state:</span>
-                    <input type="text" placeholder="Amabo Raphael ">
+                    <input type="text" placeholder="Amabo Raphael "required>
                 </div>
                 <div class="inputBox">
                     <span> zip code :</span>
-                    <input type="text" placeholder="123 333">
+                    <input type="text" placeholder="123 333"required>
                 </div>
 
 
